[project]
name = "autowiki-tools"
version = "0.1.0"
description = "JSON database management CLI for Auto-Wiki"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[project.scripts]
awiki = "tools.cli:main"
